unit test fixed. Functional tests running clean